[gd_scene load_steps=16 format=3 uid="uid://b1pjni62xk1hf"]

[ext_resource type="Script" path="res://scripts/main_character.gd" id="1_sd4bt"]
[ext_resource type="Texture2D" uid="uid://dgdjbdtj3uy16" path="res://chef-spritesheet.png" id="2_6ubto"]
[ext_resource type="Texture2D" uid="uid://df1ml0p2dl4qg" path="res://assets/tilemap.png" id="3_t5rtp"]
[ext_resource type="Script" path="res://scripts/CooldownVisual.gd" id="4_il13u"]
[ext_resource type="Texture2D" uid="uid://8gn8qlmkg6kk" path="res://assets/light_circle_small.png" id="5_jsugr"]
[ext_resource type="Script" path="res://scripts/DurationVisual.gd" id="5_q2f76"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vnxgg"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_s3ne1"]
resource_name = "walk_down"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_d0n16"]
resource_name = "walk_left"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_6fvuc"]
resource_name = "walk_right"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_h6f44"]
resource_name = "walk_up"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3o6v2"]
_data = {
"walk_down": SubResource("Animation_s3ne1"),
"walk_left": SubResource("Animation_d0n16"),
"walk_right": SubResource("Animation_6fvuc"),
"walk_up": SubResource("Animation_h6f44")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pyhll"]
radius = 4.0
height = 15.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jwx58"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r7wnl"]
bg_color = Color(0, 0.739565, 0.503636, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 1

[node name="MainCharacter" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 9
script = ExtResource("1_sd4bt")

[node name="CharacterSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_6ubto")
hframes = 4
vframes = 4
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_vnxgg")

[node name="CharacterAnimation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_3o6v2")
}

[node name="Detection" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="DetectionShape" type="CollisionShape2D" parent="Detection"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_pyhll")

[node name="DumpsterSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("3_t5rtp")
region_enabled = true
region_rect = Rect2(136, 204, 16, 9)

[node name="DisguiseDuration" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0

[node name="DisguiseCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0

[node name="CooldownVisual" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.475831, 0.426589, 1)
z_index = 5
material = SubResource("CanvasItemMaterial_jwx58")
offset_left = -6.0
offset_top = -11.0
offset_right = 6.0
offset_bottom = -7.0
max_value = 3.0
show_percentage = false
script = ExtResource("4_il13u")

[node name="DurationVisual" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.475831, 0.426589, 1)
z_index = 5
material = SubResource("CanvasItemMaterial_jwx58")
offset_left = -6.0
offset_top = -11.0
offset_right = 6.0
offset_bottom = -7.0
theme_override_styles/fill = SubResource("StyleBoxFlat_r7wnl")
max_value = 3.0
show_percentage = false
script = ExtResource("5_q2f76")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(0.25, 0.25)
color = Color(0.800491, 0.800491, 0.800491, 1)
energy = 0.3
texture = ExtResource("5_jsugr")

[node name="MainCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 1152
limit_bottom = 648

[connection signal="area_entered" from="Detection" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="Detection" to="." method="_on_detection_area_exited"]
[connection signal="timeout" from="DisguiseDuration" to="." method="_on_disguise_duration_timeout"]
[connection signal="timeout" from="DisguiseDuration" to="CooldownVisual" method="_on_disguise_duration_timeout"]
[connection signal="timeout" from="DisguiseDuration" to="DurationVisual" method="_on_disguise_duration_timeout"]
[connection signal="timeout" from="DisguiseCooldown" to="." method="_on_disguise_cooldown_timeout"]
[connection signal="timeout" from="DisguiseCooldown" to="CooldownVisual" method="_on_disguise_cooldown_timeout"]
[connection signal="timeout" from="DisguiseCooldown" to="DurationVisual" method="_on_disguise_cooldown_timeout"]
